--- a/.gitstopwatch.html
+++ b/.gitstopwatch.html
@@ -18,7 +18,7 @@
 
     <title>Design Stopwatch using HTML CSS and JavaScript</title> 
 
-    <link rel="stylesheet" href="css1.css"> 
+    <link rel="stylesheet" href=".gitstopwatch.css"> 
 
 </head> 
 
