--- a/.gitstopwatch.html
+++ b/.gitstopwatch.html
@@ -81,7 +81,7 @@
         </div> 
 
     </div> 
-    <script src="javascript.js"></script> 
+    <script src=".gitstopwatch.js"></script> 
 
 </body> 
 </html>
