Update and rename .gitstopwatch.html to stopwatch.html

--- a/stopwatch.html
+++ b/stopwatch.html
@@ -18,7 +18,7 @@
 
     <title>Design Stopwatch using HTML CSS and JavaScript</title> 
 
-    <link rel="stylesheet" href=".gitstopwatch.css"> 
+    <link rel="stylesheet" href="stopwatch.css"> 
 
 </head> 
 
@@ -81,7 +81,7 @@
         </div> 
 
     </div> 
-    <script src=".gitstopwatch.js"></script> 
+    <script src="stopwatch.js"></script> 
 
 </body> 
 </html>
